// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Form Page 2 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Prosjektet"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="active"
          data-variant="default"
          aria-current="step"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<removed>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="_r_6_"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Prosjektet"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <h2 data-size="sm">
        Prosjektet
      </h2>
      <div>
      </div>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Tittel på prosjektet
          </span>
        </label>
        <div>
          <input
            id="<removed>"
            autocomplete="off"
            required
            type="text"
            name="projectTitle"
          >
        </div>
      </ds-field>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Beskrivelse av prosjektet
          </span>
        </label>
        <div>
          <textarea
            id="<removed>"
            rows="4"
            name="projectDescription"
            autocomplete="off"
            required
            style="<removed>"
          >
          </textarea>
        </div>
      </ds-field>
      <fieldset
        id="<removed>"
        tabindex="-1"
        aria-labelledby="<removed>"
      >
        <legend
          data-weight="medium"
          id="<removed>"
        >
          <span>
            Kategori
          </span>
        </legend>
        <p
          data-variant="default"
          id="<removed>"
        >
          Hvilken kategori hører prosjektet til?
        </p>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            required
            type="radio"
            value="Learning"
            name="projectCategory"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              Opplæring
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            required
            type="radio"
            value="social"
            name="projectCategory"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              Sosialt
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            required
            type="radio"
            value="activity"
            name="projectCategory"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              Aktivitet
            </span>
          </label>
        </ds-field>
        <details>
          <summary>
            Grunnen til at vi spør om dette
          </summary>
          <div>
            Tilskuddsordningen skal dekke et bredt spekter av tilbud. For å ha oversikt over fordelingen av budsjettposten trenger vi å vite hvilket tilbud det søkes om å utvide.
          </div>
        </details>
      </fieldset>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Gjennomføringssted
          </span>
        </label>
        <div
          data-field="description"
          id="<removed>"
        >
          Hvilket fylke vil prosjektet gjennomføres i?
        </div>
        <ds-suggestion>
          <input
            placeholder=" "
            autocomplete="off"
            id="<removed>"
            required
            type="text"
            aria-describedby="<removed>"
            popovertarget=":ds:4"
            data-label="Gjennomføringssted"
            list=":ds:4"
            aria-label="Gjennomføringssted​​​​​"
            aria-autocomplete="list"
            aria-controls=":ds:4"
            aria-expanded="true"
            role="combobox"
          >
          <del
            aria-label="Tøm"
            hidden
            role="button"
          >
          </del>
          <u-datalist
            data-nofilter
            data-sr-plural="%d forslag"
            data-sr-singular="%d forslag"
            popover="manual"
            role="listbox"
            id="<removed>"
            hidden
            tabindex="-1"
            aria-multiselectable="false"
          >
            <u-option
              label="Agder"
              value="Agder"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Agder
            </u-option>
            <u-option
              label="Akershus"
              value="Akershus"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Akershus
            </u-option>
            <u-option
              label="Buskerud"
              value="Buskerud"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Buskerud
            </u-option>
            <u-option
              label="Finnmark"
              value="Finnmark"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Finnmark
            </u-option>
            <u-option
              label="Innlandet"
              value="Innlandet"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Innlandet
            </u-option>
            <u-option
              label="Møre og Romsdal"
              value="Møre og Romsdal"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Møre og Romsdal
            </u-option>
            <u-option
              label="Nordland"
              value="Nordland"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Nordland
            </u-option>
            <u-option
              label="Oslo"
              value="Oslo"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Oslo
            </u-option>
            <u-option
              label="Rogaland"
              value="Rogaland"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Rogaland
            </u-option>
            <u-option
              label="Telemark"
              value="Telemark"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Telemark
            </u-option>
            <u-option
              label="Troms"
              value="Troms"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Troms
            </u-option>
            <u-option
              label="Trøndelag"
              value="Trøndelag"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Trøndelag
            </u-option>
            <u-option
              label="Vestfold"
              value="Vestfold"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Vestfold
            </u-option>
            <u-option
              label="Vestland"
              value="Vestland"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Vestland
            </u-option>
            <u-option
              label="Østfold"
              value="Østfold"
              tabindex="-1"
              role="option"
              aria-disabled="false"
              aria-selected="false"
            >
              Østfold
            </u-option>
          </u-datalist>
          <select
            name="county"
            hidden
            id="<removed>"
          >
          </select>
        </ds-suggestion>
      </ds-field>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Aldersgruppe
          </span>
        </label>
        <div
          data-field="description"
          id="<removed>"
        >
          Hvilken aldersgruppe er prosjektet rettet mot?
        </div>
        <select
          aria-readonly="false"
          id="<removed>"
          name="ageGroup"
          autocomplete="off"
          required
          aria-describedby="<removed>"
        >
          <option
            value="blank"
            disabled
            selected
          >
            Velg aldersgruppe
          </option>
          <option value="kindergarten">
            3-5 år
          </option>
          <option value="kids">
            6-12 år
          </option>
          <option value="youth">
            13-15 år
          </option>
          <option value="adult">
            16-19 år
          </option>
        </select>
      </ds-field>
      <div>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M8.97 6.97a.75.75 0 1 1 1.06 1.06l-3.22 3.22H19a.75.75 0 0 1 0 1.5H6.81l3.22 3.22a.75.75 0 1 1-1.06 1.06l-4.5-4.5a.75.75 0 0 1 0-1.06z"
            >
            </path>
          </svg>
          Forrige
        </button>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          Neste
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<removed>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Page 3 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Dokumentasjon"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="active"
          data-variant="default"
          aria-current="step"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<removed>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="_r_d_"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Dokumentasjon"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <h2 data-size="sm">
        Dokumentasjon
      </h2>
      <div>
      </div>
      <div>
        <label
          data-weight="medium"
          id="<removed>"
          for="<removed>"
        >
          <span>
            Last opp dokumentasjon
          </span>
        </label>
        <div
          data-field="description"
          id="<removed>"
        >
          Du kan laste opp filer i PDF-format. Filer kan være opptil 25 MB.
        </div>
        <div
          data-variant="default"
          role="presentation"
        >
          <div>
          </div>
          <button
            data-variant="secondary"
            type="button"
            id="<removed>"
            aria-labelledby="<removed>"
            aria-describedby="<removed>"
            aria-label="Velg filer"
          >
            <svg
              xmlns="http://www.w3.org/2000/svg"
              width="1em"
              height="1em"
              fill="none"
              viewbox="0 0 24 24"
              focusable="false"
              role="img"
              aria-hidden="true"
            >
              <path
                fill="currentColor"
                fill-rule="evenodd"
                d="M6.97 9.03a.75.75 0 0 0 1.06 0l3.22-3.22v8.69a.75.75 0 0 0 1.5 0V5.81l3.22 3.22a.75.75 0 1 0 1.06-1.06l-4.5-4.5a.75.75 0 0 0-1.06 0l-4.5 4.5a.75.75 0 0 0 0 1.06M4.75 15.5a.75.75 0 0 0-1.5 0V19c0 .966.784 1.75 1.75 1.75h14A1.75 1.75 0 0 0 20.75 19v-3.5a.75.75 0 0 0-1.5 0V19a.25.25 0 0 1-.25.25H5a.25.25 0 0 1-.25-.25z"
                clip-rule="evenodd"
              >
              </path>
            </svg>
          </button>
        </div>
        <input
          accept="application/pdf"
          multiple
          tabindex="-1"
          required
          id="<removed>"
          type="file"
          style="<removed>"
        >
      </div>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Kommentarer til dokumentasjon
          </span>
        </label>
        <div
          data-field="description"
          id="<removed>"
        >
          Ytterlige kommentarer til dokumentasjonen du har lastet opp.
        </div>
        <textarea
          id="<removed>"
          name="addition"
          aria-describedby="<removed>"
          style="<removed>"
        >
        </textarea>
      </ds-field>
      <div>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M8.97 6.97a.75.75 0 1 1 1.06 1.06l-3.22 3.22H19a.75.75 0 0 1 0 1.5H6.81l3.22 3.22a.75.75 0 1 1-1.06 1.06l-4.5-4.5a.75.75 0 0 1 0-1.06z"
            >
            </path>
          </svg>
          Forrige
        </button>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          Neste
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<removed>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Page 4 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Innsending"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="active"
          data-variant="submission"
          aria-current="step"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<removed>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="_r_m_"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Innsending"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="active"
            data-variant="submission"
            aria-current="step"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <h2>
        Innsending
      </h2>
      <p data-variant="default">
        Send inn søknaden.
      </p>
      <div>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M8.97 6.97a.75.75 0 1 1 1.06 1.06l-3.22 3.22H19a.75.75 0 0 1 0 1.5H6.81l3.22 3.22a.75.75 0 1 1-1.06 1.06l-4.5-4.5a.75.75 0 0 1 0-1.06z"
            >
            </path>
          </svg>
          Forrige
        </button>
        <button
          data-variant="primary"
          type="button"
          style="<removed>"
        >
          Send inn skjema
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              fill-rule="evenodd"
              d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
              clip-rule="evenodd"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<removed>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Page 5 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Kvittering"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="active"
          data-variant="confirmation"
          aria-current="step"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<removed>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="_r_s_"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Kvittering"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="active"
            data-variant="confirmation"
            aria-current="step"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <div>
        <h2 data-size="sm">
          Kvittering
        </h2>
        <p
          data-variant="default"
          data-size="xl"
        >
          Takk!
        </p>
        <p data-variant="default">
          Vi har mottatt din søknad. Du hører tilbake innen en måned.
        </p>
      </div>
      <div>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<removed>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;

exports[`Form Story 1`] = `
<div data-size="auto">
  <div>
    <div>
      <details
        data-state="idle"
        open
        data-active-step-label="Kontaktinfo"
      >
        <summary>
          <span>
            Testsøknad
          </span>
        </summary>
        <button
          data-state="active"
          data-variant="default"
          aria-current="step"
        >
          <div>
          </div>
          Kontaktinfo
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Prosjektet
        </button>
        <button
          data-state="idle"
          data-variant="default"
        >
          <div>
          </div>
          Dokumentasjon
        </button>
        <button
          data-state="idle"
          data-variant="submission"
        >
          <div>
          </div>
          Innsending
        </button>
        <button
          data-state="idle"
          data-variant="confirmation"
          disabled
        >
          <div>
          </div>
          Kvittering
        </button>
      </details>
    </div>
  </div>
  <div>
    <button
      data-variant="secondary"
      type="button"
      aria-haspopup="dialog"
      data-color="neutral"
    >
      <svg
        xmlns="http://www.w3.org/2000/svg"
        width="1em"
        height="1em"
        fill="none"
        viewbox="0 0 24 24"
        focusable="false"
        role="img"
        aria-hidden="true"
      >
        <path
          fill="currentColor"
          fill-rule="evenodd"
          d="M4 5.75a.25.25 0 1 0 0 .5.25.25 0 0 0 0-.5M2.25 6a1.75 1.75 0 1 1 3.5 0 1.75 1.75 0 0 1-3.5 0m1.5 6a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 10.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5M3.75 18a.25.25 0 1 1 .5 0 .25.25 0 0 1-.5 0M4 16.25a1.75 1.75 0 1 0 0 3.5 1.75 1.75 0 0 0 0-3.5m5 1a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5zM8.25 12a.75.75 0 0 1 .75-.75h12a.75.75 0 0 1 0 1.5H9a.75.75 0 0 1-.75-.75M9 5.25a.75.75 0 0 0 0 1.5h12a.75.75 0 0 0 0-1.5z"
          clip-rule="evenodd"
        >
        </path>
      </svg>
      Naviger
    </button>
    <dialog
      data-placement="center"
      data-modal="true"
      id="<removed>"
      closedby="any"
      style="<removed>"
    >
      <button
        data-icon="true"
        commandfor="_r_1_"
        data-variant="tertiary"
        type="button"
        aria-label="Lukk dialogvindu"
        data-color="neutral"
        command="close"
      >
      </button>
      <h2>
        Skjemanavigasjon
      </h2>
      <div>
        <details
          data-state="idle"
          open
          data-active-step-label="Kontaktinfo"
        >
          <summary>
            <span>
              Testsøknad
            </span>
          </summary>
          <button
            data-state="active"
            data-variant="default"
            aria-current="step"
          >
            <div>
            </div>
            Kontaktinfo
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Prosjektet
          </button>
          <button
            data-state="idle"
            data-variant="default"
          >
            <div>
            </div>
            Dokumentasjon
          </button>
          <button
            data-state="idle"
            data-variant="submission"
          >
            <div>
            </div>
            Innsending
          </button>
          <button
            data-state="idle"
            data-variant="confirmation"
            disabled
          >
            <div>
            </div>
            Kvittering
          </button>
        </details>
      </div>
    </dialog>
  </div>
  <div data-color-scheme="light">
    <h1 data-size="md">
      Testsøknad
    </h1>
    <form
      data-variant="outline"
      data-show-required="true"
      data-show-optional="false"
      data-show-summary="true"
    >
      <h2 data-size="sm">
        Kontaktinfo
      </h2>
      <div>
      </div>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Fornavn
          </span>
        </label>
        <div>
          <input
            id="<removed>"
            autocomplete="given-name"
            required
            type="text"
            name="firstName"
          >
        </div>
      </ds-field>
      <ds-field>
        <label
          data-weight="medium"
          for="<removed>"
        >
          <span>
            Etternavn
          </span>
        </label>
        <input
          id="<removed>"
          required
          autocomplete="family-name"
          type="text"
          name="lastName"
        >
      </ds-field>
      <fieldset
        id="<removed>"
        tabindex="-1"
        aria-labelledby="<removed>"
      >
        <legend
          data-weight="medium"
          id="<removed>"
        >
          <span>
            Hvordan ønsker du at vi skal kontakte deg?
          </span>
        </legend>
        <p
          data-variant="default"
          id="<removed>"
        >
          Velg ett eller flere alternativer
        </p>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            required
            type="checkbox"
            value="epost"
            name="contactMethods"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              E-post
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            required
            type="checkbox"
            value="telefon"
            name="contactMethods"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              Telefon
            </span>
          </label>
        </ds-field>
        <ds-field data-clickdelegatefor="<removed>">
          <input
            id="<removed>"
            required
            type="checkbox"
            value="sms"
            name="contactMethods"
          >
          <label
            data-weight="regular"
            for="<removed>"
          >
            <span>
              SMS
            </span>
          </label>
        </ds-field>
      </fieldset>
      <div>
        <button
          data-variant="secondary"
          type="button"
          style="<removed>"
        >
          Neste
          <svg
            xmlns="http://www.w3.org/2000/svg"
            width="1em"
            height="1em"
            fill="none"
            viewbox="0 0 24 24"
            focusable="false"
            role="img"
            aria-hidden="true"
          >
            <path
              fill="currentColor"
              d="M14.088 6.873a.75.75 0 0 1 .942.097l4.5 4.5a.75.75 0 0 1 0 1.06l-4.5 4.5a.75.75 0 0 1-1.06-1.06l3.22-3.22H5a.75.75 0 0 1-.75-.74V12a.75.75 0 0 1 .75-.75h12.19l-3.22-3.22a.75.75 0 0 1 .118-1.157"
            >
            </path>
          </svg>
        </button>
      </div>
      <dialog
        data-placement="center"
        data-modal="true"
        id="<removed>"
        style="<removed>"
      >
        <div>
          <h2 data-size="xs">
            Er du sikker på at du vil sende inn skjema?
          </h2>
          <div>
            <button
              data-variant="secondary"
              type="button"
              style="<removed>"
            >
              Avbryt
            </button>
            <button
              data-variant="primary"
              type="submit"
              style="<removed>"
            >
              Send inn
              <svg
                xmlns="http://www.w3.org/2000/svg"
                width="1em"
                height="1em"
                fill="none"
                viewbox="0 0 24 24"
                focusable="false"
                role="img"
                aria-hidden="true"
              >
                <path
                  fill="currentColor"
                  fill-rule="evenodd"
                  d="M6.317 4.32a.75.75 0 0 0-1.023.932L7.704 12l-2.41 6.748a.75.75 0 0 0 1.023.932l15-7a.75.75 0 0 0 0-1.36zm2.712 6.93L7.31 6.44 19.227 12 7.31 17.56l1.719-4.81H12.5a.75.75 0 0 0 0-1.5z"
                  clip-rule="evenodd"
                >
                </path>
              </svg>
            </button>
          </div>
        </div>
      </dialog>
    </form>
  </div>
</div>
`;
